crates/aranya-policy-lang/tests/data/keyword_collision/assignment_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
2 |     let int = 3
  |         ^^^ int
